--- a/lightseq/csrc/kernels/CMakeLists.txt
+++ b/lightseq/csrc/kernels/CMakeLists.txt
@@ -1,9 +1,9 @@
 find_package(CUDAToolkit)
 
-set(cuda_kernel_files 
+set(cuda_kernel_files
     cross_entropy.cu
     cublas_wrappers.cu
-    cuda_util.cu 
+    cuda_util.cu
     dropout_kernels.cu
     embedding_kernels.cu
     embKernels.cc.cu
@@ -13,8 +13,7 @@ set(cuda_kernel_files
     softmax_kernels.cu
     softmax_kernels_new.cu
     transform_kernels.cu
-    transform_kernels_new.cu
-)
+    transform_kernels_new.cu)
 
 add_library(cuda_kernels STATIC ${cuda_kernel_files})
 target_include_directories(cuda_kernels INTERFACE includes)
