--- a/lightseq/csrc/ops_new/CMakeLists.txt
+++ b/lightseq/csrc/ops_new/CMakeLists.txt
@@ -1,5 +1,4 @@
-
-set(operator_files 
+set(operator_files
     bias_act_dropout.cpp
     bias_add_transform_20314.cpp
     bias_dropout_residual.cpp
@@ -9,8 +8,7 @@ set(operator_files
     normalize_layer.cpp
     softmax.cpp
     strided_batch_gemm.cpp
-    transform_0213.cpp
-)
+    transform_0213.cpp)
 
 add_library(lightseq_operators STATIC ${operator_files})
 target_link_libraries(lightseq_operators PUBLIC cuda_kernels -lcublas)
