--- a/lightseq/csrc/CMakeLists.txt
+++ b/lightseq/csrc/CMakeLists.txt
@@ -1,14 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(LightseqProtoType LANGUAGES C CXX CUDA)
 
-set(CMAKE_CUDA_ARCHITECTURES
-    60
-    61
-    70
-    75
-    80
-    86
-    87)
+set(CMAKE_CUDA_ARCHITECTURES 70 75 80 86 87)
 find_package(CUDA 11.6 REQUIRED)
 
 set(CUDA_PATH ${CUDA_TOOLKIT_ROOT_DIR})
@@ -29,6 +22,10 @@ else()
   # static link to cuda libraries and protobuf
   set(CMAKE_CUDA_RUNTIME_LIBRARY "Static")
   set(HDF5_USE_STATIC_LIBRARIES ON)
+endif()
+
+if(DEBUG_MODE)
+  add_definitions(-DDEBUG)
 endif()
 
 set(Protobuf_USE_STATIC_LIBS ON)
