Interface optimization & decoder development

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
 project(LightSeq LANGUAGES C CXX CUDA)
 
-set(CMAKE_CUDA_ARCHITECTURES 60 61 70 75 80 86)
 find_package(CUDA 11 REQUIRED)
 
+option(NEW_ARCH "inference with fp16" OFF)
 option(FP16_MODE "inference with fp16" OFF)
 option(DEBUG_MODE "debug computation result" OFF)
 option(DYNAMIC_API "build dynamic lightseq api library" OFF)
@@ -34,37 +34,84 @@ set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(COMMON_HEADER_DIRS ${PROJECT_SOURCE_DIR} ${CUDA_PATH}/include)
-set(COMMON_LIB_DIRS ${CUDA_PATH}/lib64)
+if(NEW_ARCH)
 
-include_directories(${COMMON_HEADER_DIRS})
-include_directories(SYSTEM ${PROJECT_SOURCE_DIR}/3rdparty/cub)
+  set(CMAKE_CUDA_ARCHITECTURES 70 75 80 86 87)
 
-link_directories(${COMMON_LIB_DIRS})
+  if(DEBUG_MODE)
+    if(FP16_MODE)
+      add_definitions(-DDEBUG_TYPE=FP16)
+    else()
+      add_definitions(-DDEBUG_TYPE=FP32)
+    endif()
+  endif()
 
-add_compile_options(-Wno-unknown-pragmas)
+  set(COMMON_HEADER_DIRS
+      ${PROJECT_SOURCE_DIR}
+      ${CUDA_PATH}/include
+      lightseq/csrc/kernels/includes
+      lightseq/csrc/layers_new/includes
+      lightseq/csrc/lsflow/includes
+      lightseq/csrc/models/includes
+      lightseq/csrc/ops_new/includes
+      lightseq/csrc/proto/includes
+      lightseq/csrc/tools/includes)
 
-if(FP16_MODE)
-  add_definitions(-DFP16_MODE)
-  message(STATUS "Build using fp16 precision")
+  set(COMMON_LIB_DIRS ${CUDA_PATH}/lib64)
+
+  include_directories(${COMMON_HEADER_DIRS})
+  include_directories(SYSTEM ${PROJECT_SOURCE_DIR}/3rdparty/cub)
+
+  link_directories(${COMMON_LIB_DIRS})
+
+  add_subdirectory(3rdparty/pybind11)
+  add_subdirectory(lightseq/csrc/tools)
+  add_subdirectory(lightseq/csrc/kernels)
+  add_subdirectory(lightseq/csrc/layers_new)
+  add_subdirectory(lightseq/csrc/lsflow)
+  add_subdirectory(lightseq/csrc/models)
+  add_subdirectory(lightseq/csrc/ops_new)
+  add_subdirectory(lightseq/csrc/proto)
+  add_subdirectory(lightseq/csrc/pybind)
+  add_subdirectory(lightseq/csrc/example)
+
 else()
-  message(STATUS "Build using fp32 precision")
-endif()
 
-if(DEBUG_MODE)
-  add_definitions(-DDEBUG_RESULT)
-  message(STATUS "Debug computation result")
-endif()
+  set(CMAKE_CUDA_ARCHITECTURES 60 61 70 75 80 86)
 
-add_subdirectory(3rdparty/pybind11)
-add_subdirectory(lightseq/inference/kernels)
-add_subdirectory(lightseq/inference/tools)
-add_subdirectory(lightseq/inference/proto)
-add_subdirectory(lightseq/inference/model)
-add_subdirectory(lightseq/inference/pywrapper)
-add_subdirectory(lightseq/inference/server)
-if(USE_TRITONBACKEND)
-  add_subdirectory(lightseq/inference/triton_backend)
-endif()
+  set(COMMON_HEADER_DIRS ${PROJECT_SOURCE_DIR} ${CUDA_PATH}/include)
+  set(COMMON_LIB_DIRS ${CUDA_PATH}/lib64)
 
-# add_subdirectory(examples/inference/cpp)
+  include_directories(${COMMON_HEADER_DIRS})
+  include_directories(SYSTEM ${PROJECT_SOURCE_DIR}/3rdparty/cub)
+
+  link_directories(${COMMON_LIB_DIRS})
+
+  add_compile_options(-Wno-unknown-pragmas)
+
+  if(FP16_MODE)
+    add_definitions(-DFP16_MODE)
+    message(STATUS "Build using fp16 precision")
+  else()
+    message(STATUS "Build using fp32 precision")
+  endif()
+
+  if(DEBUG_MODE)
+    add_definitions(-DDEBUG_RESULT)
+    message(STATUS "Debug computation result")
+  endif()
+
+  add_subdirectory(3rdparty/pybind11)
+  add_subdirectory(lightseq/inference/kernels)
+  add_subdirectory(lightseq/inference/tools)
+  add_subdirectory(lightseq/inference/proto)
+  add_subdirectory(lightseq/inference/model)
+  add_subdirectory(lightseq/inference/pywrapper)
+  add_subdirectory(lightseq/inference/server)
+  if(USE_TRITONBACKEND)
+    add_subdirectory(lightseq/inference/triton_backend)
+  endif()
+
+  # add_subdirectory(examples/inference/cpp)
+
+endif()
