--- a/lightseq/csrc/pybind/CMakeLists.txt
+++ b/lightseq/csrc/pybind/CMakeLists.txt
@@ -1,9 +1,6 @@
 cmake_minimum_required(VERSION 3.18)
 
-pybind11_add_module(
-    lightseq MODULE 
-    pybind_model.cpp
-)
+pybind11_add_module(lightseq MODULE pybind_model.cpp)
 
 target_link_libraries(lightseq PUBLIC liblightseq)
 target_link_libraries(lightseq PUBLIC utils)
