--- a/lightseq/csrc/pybind/CMakeLists.txt
+++ b/lightseq/csrc/pybind/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.18)
 
-pybind11_add_module(py_lightseq_model MODULE pybind_model.cpp)
+pybind11_add_module(lightseq MODULE pybind_model.cpp)
 
-target_link_libraries(py_lightseq_model PUBLIC liblightseq)
-target_link_libraries(py_lightseq_model PUBLIC utils)
-set_target_properties(py_lightseq_model PROPERTIES OUTPUT_NAME inference)
+target_link_libraries(lightseq PUBLIC liblightseq)
+target_link_libraries(lightseq PUBLIC utils)
+set_target_properties(lightseq PROPERTIES OUTPUT_NAME inference)
