add bert-crf files
split total buffer into serveral mini-buffer (#382)

* Interface optimization & decoder development

* fix error

* split buffer

support bert+crf weight loading

add bert crf model (with bug)

fix bug

fix bug

fix bug, restore memory.cpp to old version

update manager to latest

fix kernel bug when head_dim % 4 != 0

delete emb lang_emb loading

modify crf bias to fp32

fix cmake dtype bug

fix bug

rename cmake outputs

--- a/lightseq/csrc/kernels/CMakeLists.txt
+++ b/lightseq/csrc/kernels/CMakeLists.txt
@@ -13,7 +13,8 @@ set(cuda_kernel_files
     softmax_kernels.cu
     softmax_kernels_new.cu
     transform_kernels.cu
-    transform_kernels_new.cu)
+    transform_kernels_new.cu
+    crf.cu)
 
 add_library(cuda_kernels STATIC ${cuda_kernel_files})
 target_include_directories(cuda_kernels INTERFACE includes)
