add bert-crf files

--- a/lightseq/csrc/models/CMakeLists.txt
+++ b/lightseq/csrc/models/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_library(liblightseq SHARED bert.cc)
+add_library(liblightseq SHARED bert.cc bert_crf.cc)
 
 target_link_libraries(liblightseq PUBLIC lightseq_layers utils)
 
-target_link_libraries(liblightseq PUBLIC bert_weight)
+target_link_libraries(liblightseq PUBLIC bert_weight bert_crf_weight)
 
 target_link_options(liblightseq PUBLIC $<DEVICE_LINK:-Xcompiler
                     -fvisibility=hidden>)
