add bert-crf files
support bert+crf weight loading

add bert crf model (with bug)

fix bug

fix bug

fix bug, restore memory.cpp to old version

update manager to latest

fix kernel bug when head_dim % 4 != 0

delete emb lang_emb loading

modify crf bias to fp32

fix cmake dtype bug

fix bug

rename cmake outputs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,11 +40,15 @@ if(USE_NEW_ARCH)
   set(CMAKE_CUDA_ARCHITECTURES 70 75 80 86 87)
 
   if(DEBUG_MODE)
-    if(FP16_MODE)
-      add_definitions(-DDEBUG_TYPE=FP16)
-    else()
-      add_definitions(-DDEBUG_TYPE=FP32)
-    endif()
+    add_definitions(-DDEBUG_MODE)
+    message(STATUS "Build using debug mode")
+  endif()
+
+  if(FP16_MODE)
+    add_definitions(-DFP16_MODE)
+    message(STATUS "Build using fp16 precision")
+  else()
+    message(STATUS "Build using fp32 precision")
   endif()
 
   set(COMMON_HEADER_DIRS
