add bert crf model (with bug)

--- a/lightseq/csrc/layers_new/CMakeLists.txt
+++ b/lightseq/csrc/layers_new/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(layers_files feed_forward_layer.cpp multihead_attention_layer.cpp
-                 transformer_encoder_layer.cpp)
+                 transformer_encoder_layer.cpp linear_layer.cpp crf_layer)
 
 add_library(lightseq_layers STATIC ${layers_files})
 target_link_libraries(lightseq_layers PUBLIC lightseq_operators lsflow)
