--- a/lightseq/csrc/ops_new/CMakeLists.txt
+++ b/lightseq/csrc/ops_new/CMakeLists.txt
@@ -8,7 +8,8 @@ set(operator_files
     layer_normalize.cpp
     softmax.cpp
     strided_batch_gemm.cpp
-    transform_0213.cpp)
+    transform_0213.cpp
+    crf.cpp)
 
 add_library(lightseq_operators STATIC ${operator_files})
 target_link_libraries(lightseq_operators PUBLIC cuda_kernels -lcublas lsflow)
