rename cmake outputs

--- a/lightseq/csrc/models/CMakeLists.txt
+++ b/lightseq/csrc/models/CMakeLists.txt
@@ -8,3 +8,5 @@ target_link_options(liblightseq PUBLIC $<DEVICE_LINK:-Xcompiler
                     -fvisibility=hidden>)
 
 target_include_directories(liblightseq PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+set_target_properties(liblightseq PROPERTIES OUTPUT_NAME lightseq)
