--- a/lightseq/csrc/models/CMakeLists.txt
+++ b/lightseq/csrc/models/CMakeLists.txt
@@ -1,12 +1,10 @@
-add_library(liblightseq SHARED bert.cc bert_crf.cc)
+add_library(liblightseq SHARED bert.cc)
 
 target_link_libraries(liblightseq PUBLIC lightseq_layers utils)
 
-target_link_libraries(liblightseq PUBLIC bert_weight bert_crf_weight)
+target_link_libraries(liblightseq PUBLIC bert_weight)
 
 target_link_options(liblightseq PUBLIC $<DEVICE_LINK:-Xcompiler
                     -fvisibility=hidden>)
 
 target_include_directories(liblightseq PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-
-set_target_properties(liblightseq PROPERTIES OUTPUT_NAME lightseq)
