--- a/lightseq/csrc/ops_new/CMakeLists.txt
+++ b/lightseq/csrc/ops_new/CMakeLists.txt
@@ -10,8 +10,7 @@ set(operator_files
     strided_batch_gemm.cpp
     transform_0213.cpp
     crf.cpp
-    beam_search_topk.cu
-    )
+    beam_search_topk.cu)
 
 add_library(lightseq_operators STATIC ${operator_files})
 target_link_libraries(lightseq_operators PUBLIC cuda_kernels -lcublas lsflow)
