--- a/lightseq/csrc/proto/CMakeLists.txt
+++ b/lightseq/csrc/proto/CMakeLists.txt
@@ -22,9 +22,13 @@ target_link_libraries(bert_crf_weight PUBLIC utils ${Protobuf_LIBRARIES})
 target_include_directories(bert_crf_weight PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(bert_crf_weight PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
 
-protobuf_generate_cpp(TRANSFORMER_PROTO_SRC TRANSFORMER_PROTO_HEADER transformer.proto)
-add_library(transformer_weight STATIC transformer_weight.cc ${TRANSFORMER_PROTO_SRC}
-                                   ${TRANSFORMER_PROTO_HEADER})
+protobuf_generate_cpp(TRANSFORMER_PROTO_SRC TRANSFORMER_PROTO_HEADER
+                      transformer.proto)
+add_library(
+  transformer_weight STATIC transformer_weight.cc ${TRANSFORMER_PROTO_SRC}
+                            ${TRANSFORMER_PROTO_HEADER})
 target_link_libraries(transformer_weight PUBLIC utils ${Protobuf_LIBRARIES})
-target_include_directories(transformer_weight PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_include_directories(transformer_weight PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+target_include_directories(transformer_weight
+                           PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(transformer_weight
+                           PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
