transformer model develop

--- a/lightseq/csrc/layers_new/CMakeLists.txt
+++ b/lightseq/csrc/layers_new/CMakeLists.txt
@@ -1,5 +1,4 @@
 set(layers_files
-    beam_search_topk.cu
     crf_layer.cpp
     dec_enc_attention_layer.cpp
     dec_self_attention_layer.cpp
@@ -7,6 +6,7 @@ set(layers_files
     feed_forward_layer.cpp
     linear_layer.cpp
     multihead_attention_layer.cpp
+    sample_layer.cpp
     transformer_encoder_layer.cpp
     transformer_decoder_layer.cpp)
 
