--- a/lightseq/csrc/layers_new/CMakeLists.txt
+++ b/lightseq/csrc/layers_new/CMakeLists.txt
@@ -6,7 +6,7 @@ set(layers_files
     feed_forward_layer.cpp
     linear_layer.cpp
     multihead_attention_layer.cpp
-    # sample_layer.cpp
+    sample_layer.cpp
     transformer_encoder_layer.cpp
     transformer_decoder_layer.cpp)
 
