--- a/lightseq/csrc/ops_new/CMakeLists.txt
+++ b/lightseq/csrc/ops_new/CMakeLists.txt
@@ -12,8 +12,7 @@ set(operator_files
     softmax.cpp
     strided_batch_gemm.cpp
     transform_0213.cpp
-    beam_search_topk.cu
-)
+    beam_search_topk.cu)
 
 add_library(lightseq_operators STATIC ${operator_files})
 target_link_libraries(lightseq_operators PUBLIC cuda_kernels -lcublas lsflow)
