--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(CUDA 11 REQUIRED)
 
 option(USE_NEW_ARCH "inference with new arch" OFF)
 option(FP16_MODE "inference with fp16" OFF)
+option(INT8_MODE "inference with int8" OFF)
 option(DEBUG_MODE "debug computation result" OFF)
 option(DYNAMIC_API "build dynamic lightseq api library" OFF)
 option(USE_TRITONBACKEND "build tritonbackend for lightseq" OFF)
@@ -49,6 +50,13 @@ if(USE_NEW_ARCH)
     message(STATUS "Build using fp16 precision")
   else()
     message(STATUS "Build using fp32 precision")
+  endif()
+
+  if(INT8_MODE)
+    add_definitions(-DINT8_MODE)
+    message(STATUS "Build using int8 precision")
+  else()
+    message(STATUS "Build using float precision")
   endif()
 
   set(COMMON_HEADER_DIRS
@@ -102,6 +110,13 @@ else()
     message(STATUS "Build using fp16 precision")
   else()
     message(STATUS "Build using fp32 precision")
+  endif()
+
+  if(INT8_MODE)
+    add_definitions(-DINT8_MODE)
+    message(STATUS "Build using int8 precision")
+  else()
+    message(STATUS "Build using float precision")
   endif()
 
   if(DEBUG_MODE)
