--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ if(USE_NEW_ARCH)
 
 else()
 
-  set(CMAKE_CUDA_ARCHITECTURES 60 61 70 75 80 86)
+  set(CMAKE_CUDA_ARCHITECTURES 70 75 80 86)
 
   set(COMMON_HEADER_DIRS ${PROJECT_SOURCE_DIR} ${CUDA_PATH}/include)
   set(COMMON_LIB_DIRS ${CUDA_PATH}/lib64)
