--- a/lightseq/csrc/kernels/cuda/CMakeLists.txt
+++ b/lightseq/csrc/kernels/cuda/CMakeLists.txt
@@ -1,7 +1,12 @@
 find_package(CUDAToolkit)
 cmake_minimum_required(VERSION 3.18)
+# (default) use C API for HDF5 library
+find_package(HDF5 REQUIRED)
+
+add_subdirectory(tools)
 
 set(cuda_kernel_files
+    util.cc.cu
     cross_entropy.cu
     cublas_wrappers.cu
     cuda_util.cu
@@ -19,4 +24,6 @@ set(cuda_kernel_files
     transformerKernels.cc.cu)
 
 add_library(cuda_kernels STATIC ${cuda_kernel_files})
+target_include_directories(cuda_kernels PUBLIC ${HDF5_INCLUDE_DIRS})
 target_include_directories(cuda_kernels INTERFACE includes)
+target_link_libraries(cuda_kernels PRIVATE ${HDF5_LIBRARIES})
