--- a/lightseq/csrc/models/CMakeLists.txt
+++ b/lightseq/csrc/models/CMakeLists.txt
@@ -1,9 +1,8 @@
 add_library(liblightseq SHARED bert.cc bert_crf.cc transformer.cu)
 
-target_link_libraries(liblightseq PUBLIC lightseq_layers utils)
+target_link_libraries(liblightseq PUBLIC lightseq_layers cuda_kernels)
 
-target_link_libraries(liblightseq PUBLIC bert_weight bert_crf_weight
-                                         transformer_weight)
+target_link_libraries(liblightseq PUBLIC weight_lib)
 
 target_link_options(liblightseq PUBLIC $<DEVICE_LINK:-Xcompiler
                     -fvisibility=hidden>)
