multi device develop

--- a/lightseq/csrc/lsflow/CMakeLists.txt
+++ b/lightseq/csrc/lsflow/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories(includes)
 
 add_library(lsflow STATIC context.cpp node.cpp manager.cpp layer.cpp tensor.cpp)
 
-target_link_libraries(lsflow PUBLIC cuda_kernels -lcublas)
+target_link_libraries(lsflow PUBLIC cuda_kernels)
 
 if(DEBUG)
   add_subdirectory(example)
