--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,6 @@
 cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
 project(LightSeq LANGUAGES C CXX CUDA)
 
-find_package(CUDA 11 REQUIRED)
-
-set(DEVICE_ARCHITECTURE cuda)
-if(DEVICE_ARCH) # The value of DEVICE should be in cuda/x86/arm
-  set(DEVICE_ARCHITECTURE ${DEVICE_ARCH})
-endif()
-set(DEVICE_ARCHITECTURES_LIST cuda x86 arm)
-list(FIND DEVICE_ARCHITECTURES_LIST ${DEVICE_ARCHITECTURE} index)
-if(index GREATER -1)
-  message(STATUS "compile with device ${DEVICE_ARCHITECTURE} ${index}")
-  add_definitions(-DDEVICE_ARCHITECTURE=index)
-else()
-  message(WARNING "compiled with -DDEVICE_ARCHITECTURE=${DEVICE_ARCHITECTURE}")
-  message(
-    FATAL_ERROR
-      "-DDEVICE_ARCHITECTURE=\$\{device\} must in value of list [${DEVICE_ARCHITECTURES_LIST}]"
-  )
-  return()
-endif()
-
 option(USE_NEW_ARCH "inference with new arch" OFF)
 option(FP16_MODE "inference with fp16" OFF)
 option(DEBUG_MODE "debug computation result" OFF)
@@ -28,35 +8,53 @@ option(MEM_DEBUG "debug memory message" OFF)
 option(DYNAMIC_API "build dynamic lightseq api library" OFF)
 option(USE_TRITONBACKEND "build tritonbackend for lightseq" OFF)
 
-set(CUDA_PATH ${CUDA_TOOLKIT_ROOT_DIR})
-list(APPEND CMAKE_MODULE_PATH ${CUDA_PATH}/lib64)
-
-# setting compiler flags
-set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall -O0")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -O0")
-set(CMAKE_CUDA_FLAGS_DEBUG "${CMAKE_CUDA_FLAGS_DEBUG} -g -G -Xcompiler -Wall")
-
-if(DYNAMIC_API)
-  # dynamic link to cuda libraries and protobuf
-  set(CMAKE_CUDA_RUNTIME_LIBRARY "Shared")
-  set(HDF5_USE_STATIC_LIBRARIES OFF)
-else()
-  # static link to cuda libraries and protobuf
-  set(CMAKE_CUDA_RUNTIME_LIBRARY "Static")
-  set(HDF5_USE_STATIC_LIBRARIES ON)
-endif()
-
-set(Protobuf_USE_STATIC_LIBS ON)
-set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
-
-set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 if(USE_NEW_ARCH)
   add_definitions(-DNEW_ARCH)
 
   set(CMAKE_CUDA_ARCHITECTURES 70 75 80 86 87)
+  set(CUDA_PATH ${CUDA_TOOLKIT_ROOT_DIR})
+  list(APPEND CMAKE_MODULE_PATH ${CUDA_PATH}/lib64)
+
+  # setting compiler flags
+  set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall -O0")
+  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -O0")
+  set(CMAKE_CUDA_FLAGS_DEBUG "${CMAKE_CUDA_FLAGS_DEBUG} -g -G -Xcompiler -Wall")
+
+  if(DYNAMIC_API)
+    # dynamic link to cuda libraries and protobuf
+    set(CMAKE_CUDA_RUNTIME_LIBRARY "Shared")
+    set(HDF5_USE_STATIC_LIBRARIES OFF)
+  else()
+    # static link to cuda libraries and protobuf
+    set(CMAKE_CUDA_RUNTIME_LIBRARY "Static")
+    set(HDF5_USE_STATIC_LIBRARIES ON)
+  endif()
+
+  set(Protobuf_USE_STATIC_LIBS ON)
+  set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+  set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
+
+  set(CMAKE_CXX_STANDARD 14)
+  set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+  set(DEVICE_ARCHITECTURE cuda)
+  if(DEVICE_ARCH) # The value of DEVICE should be in cuda/x86/arm
+    set(DEVICE_ARCHITECTURE ${DEVICE_ARCH})
+  endif()
+  set(DEVICE_ARCHITECTURES_LIST cuda x86 arm)
+  list(FIND DEVICE_ARCHITECTURES_LIST ${DEVICE_ARCHITECTURE} index)
+  if(index GREATER -1)
+    message(STATUS "compile with device ${DEVICE_ARCHITECTURE} ${index}")
+    add_definitions(-DDEVICE_ARCHITECTURE=index)
+  else()
+    message(
+      WARNING "compiled with -DDEVICE_ARCHITECTURE=${DEVICE_ARCHITECTURE}")
+    message(
+      FATAL_ERROR
+        "-DDEVICE_ARCHITECTURE=\$\{device\} must in value of list [${DEVICE_ARCHITECTURES_LIST}]"
+    )
+    return()
+  endif()
 
   if(DEBUG_MODE)
     add_definitions(-DDEBUG_MODE)
@@ -79,8 +77,7 @@ if(USE_NEW_ARCH)
   set(COMMON_HEADER_DIRS
       ${PROJECT_SOURCE_DIR}
       ${CUDA_PATH}/include
-      lightseq/csrc/kernels/cuda/includes
-      lightseq/csrc/kernels/cuda/tools/includes
+      lightseq/csrc/kernels/${DEVICE_ARCHITECTURE}/includes
       lightseq/csrc/layers_new/includes
       lightseq/csrc/lsflow/includes
       lightseq/csrc/models/includes
@@ -96,7 +93,7 @@ if(USE_NEW_ARCH)
 
   add_subdirectory(3rdparty/pybind11)
   # add_subdirectory(lightseq/csrc/tools)
-  add_subdirectory(lightseq/csrc/kernels/cuda)
+  add_subdirectory(lightseq/csrc/kernels/${DEVICE_ARCHITECTURE})
   add_subdirectory(lightseq/csrc/layers_new)
   add_subdirectory(lightseq/csrc/lsflow)
   add_subdirectory(lightseq/csrc/models)
@@ -109,6 +106,33 @@ if(USE_NEW_ARCH)
   endif()
 
 else()
+
+  find_package(CUDA 11 REQUIRED)
+
+  set(CUDA_PATH ${CUDA_TOOLKIT_ROOT_DIR})
+  list(APPEND CMAKE_MODULE_PATH ${CUDA_PATH}/lib64)
+
+  # setting compiler flags
+  set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall -O0")
+  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -O0")
+  set(CMAKE_CUDA_FLAGS_DEBUG "${CMAKE_CUDA_FLAGS_DEBUG} -g -G -Xcompiler -Wall")
+
+  if(DYNAMIC_API)
+    # dynamic link to cuda libraries and protobuf
+    set(CMAKE_CUDA_RUNTIME_LIBRARY "Shared")
+    set(HDF5_USE_STATIC_LIBRARIES OFF)
+  else()
+    # static link to cuda libraries and protobuf
+    set(CMAKE_CUDA_RUNTIME_LIBRARY "Static")
+    set(HDF5_USE_STATIC_LIBRARIES ON)
+  endif()
+
+  set(Protobuf_USE_STATIC_LIBS ON)
+  set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+  set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
+
+  set(CMAKE_CXX_STANDARD 14)
+  set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
   set(CMAKE_CUDA_ARCHITECTURES 60 61 70 75 80 86)
 
