--- a/lightseq/csrc/models/CMakeLists.txt
+++ b/lightseq/csrc/models/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(liblightseq SHARED bert.cc bert_crf.cc transformer.cu)
 
-target_link_libraries(liblightseq PUBLIC lightseq_layers cuda_kernels)
+target_link_libraries(liblightseq PUBLIC lightseq_layers)
 
 target_link_libraries(liblightseq PUBLIC weight_lib)
 
