--- a/lightseq/csrc/pybind/CMakeLists.txt
+++ b/lightseq/csrc/pybind/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.18)
 
 pybind11_add_module(lightseq MODULE pybind_model.cpp)
 
-target_link_libraries(lightseq PUBLIC liblightseq cuda_kernels)
+target_link_libraries(lightseq PUBLIC liblightseq lightseq_kernels)
 set_target_properties(lightseq PROPERTIES OUTPUT_NAME inference)
