--- a/lightseq/csrc/triton_backend/CMakeLists.txt
+++ b/lightseq/csrc/triton_backend/CMakeLists.txt
@@ -114,7 +114,7 @@ target_link_libraries(
 
 target_link_libraries(
   triton-minimal-backend PUBLIC liblightseq # from pywrapper
-                                cuda_kernels # from tools
+                                lightseq_kernels # from tools
 )
 
 target_include_directories(triton-minimal-backend
