multi device develop

--- a/lightseq/csrc/lsflow/CMakeLists.txt
+++ b/lightseq/csrc/lsflow/CMakeLists.txt
@@ -8,7 +8,8 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories(includes)
 
-add_library(lsflow STATIC context.cpp node.cpp manager.cpp layer.cpp tensor.cpp)
+add_library(lsflow STATIC context.cpp node.cpp manager.cpp layer.cpp tensor.cpp
+                          allocator.cpp)
 
 target_link_libraries(lsflow PUBLIC lightseq_kernels)
 
