--- a/lightseq/csrc/kernels/x86/CMakeLists.txt
+++ b/lightseq/csrc/kernels/x86/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.18)
 # (default) use C API for HDF5 library
 find_package(HDF5 REQUIRED)
 
-set(lightseq_kernel_files util.cc)
+set(lightseq_kernel_files util.cc gemm.cpp)
 
 add_library(lightseq_kernels STATIC ${lightseq_kernel_files})
 target_include_directories(lightseq_kernels PUBLIC ${HDF5_INCLUDE_DIRS})
