--- a/lightseq/csrc/models/CMakeLists.txt
+++ b/lightseq/csrc/models/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_library(liblightseq SHARED bert.cc bert_crf.cc transformer.cu)
+add_library(
+  liblightseq SHARED bert.cc # bert_crf.cc
+  # transformer.cu
+)
 
 target_link_libraries(liblightseq PUBLIC lightseq_layers)
 
@@ -10,3 +13,6 @@ target_link_options(liblightseq PUBLIC $<DEVICE_LINK:-Xcompiler
 target_include_directories(liblightseq PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 set_target_properties(liblightseq PROPERTIES OUTPUT_NAME lightseq)
+
+add_executable(test_example test_layer.cc)
+target_link_libraries(test_example PUBLIC liblightseq)
