--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ option(DEBUG_MODE "debug computation result" OFF)
 option(MEM_DEBUG "debug memory message" OFF)
 option(DYNAMIC_API "build dynamic lightseq api library" OFF)
 option(USE_TRITONBACKEND "build tritonbackend for lightseq" OFF)
+option(USE_PYBIND "build lightseq with pybind interface" OFF)
 
 if(USE_NEW_ARCH)
   add_definitions(-DNEW_ARCH)
@@ -38,15 +39,15 @@ if(USE_NEW_ARCH)
   set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
   set(DEVICE_ARCHITECTURES_LIST cuda x86 arm)
-  list(FIND DEVICE_ARCHITECTURES_LIST ${DEVICE_ARCH} index)
+  list(FIND DEVICE_ARCHITECTURES_LIST ${DEVICE_ARCH} DEVICE_INDEX)
 
-  if(index EQUAL 0)
+  if(DEVICE_INDEX EQUAL 0)
     add_definitions(-DLIGHTSEQ_cuda)
     set(DEVICE_ARCHITECTURE cuda)
-  elseif(index EQUAL 1)
+  elseif(DEVICE_INDEX EQUAL 1)
     add_definitions(-DLIGHTSEQ_x86)
     set(DEVICE_ARCHITECTURE x86)
-  elseif(index EQUAL 2)
+  elseif(DEVICE_INDEX EQUAL 2)
     add_definitions(-DLIGHTSEQ_arm)
     set(DEVICE_ARCHITECTURE arm)
   else()
@@ -60,7 +61,7 @@ if(USE_NEW_ARCH)
   endif()
   message(STATUS "compile with device ${DEVICE_ARCHITECTURE} ${index}")
 
-  if(index GREATER 0 AND FP16_MODE)
+  if(DEVICE_INDEX GREATER 0 AND FP16_MODE)
     message(FATAL_ERROR "CPU device does not have fp16 version")
     return()
   endif()
@@ -108,9 +109,13 @@ if(USE_NEW_ARCH)
   add_subdirectory(lightseq/csrc/models)
   add_subdirectory(lightseq/csrc/ops_new)
   add_subdirectory(lightseq/csrc/proto)
-  add_subdirectory(lightseq/csrc/pybind)
-  # add_subdirectory(lightseq/csrc/example) if(USE_TRITONBACKEND)
-  # add_subdirectory(lightseq/csrc/triton_backend) endif()
+  # add_subdirectory(lightseq/csrc/example)
+  if(USE_PYBIND)
+    add_subdirectory(lightseq/csrc/pybind)
+  endif()
+  if(USE_TRITONBACKEND)
+    add_subdirectory(lightseq/csrc/triton_backend)
+  endif()
 
 else()
 
