--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,7 @@ if(USE_NEW_ARCH)
   add_subdirectory(lightseq/csrc/proto)
   # add_subdirectory(lightseq/csrc/example)
   if(USE_PYBIND)
+    message(STATUS "compile with pybind")
     add_subdirectory(lightseq/csrc/pybind)
   endif()
   if(USE_TRITONBACKEND)
