--- a/lightseq/csrc/ops_new/CMakeLists.txt
+++ b/lightseq/csrc/ops_new/CMakeLists.txt
@@ -1,8 +1,14 @@
 set(operator_files
     bias_act_dropout.cpp
     bias_add_transform_20314.cpp
-    # bias_dropout_residual.cpp crf.cpp dropout.cpp concat3_dim1.cpp
-    # launch_enc_emb.cpp launch_dec_emb_op.cpp layer_normalize.cpp linear.cpp
+    bias_dropout_residual.cpp
+    concat3_dim1.cpp
+    crf.cpp
+    dropout.cpp
+    launch_dec_emb_op.cpp
+    launch_enc_emb.cpp
+    layer_normalize.cpp
+    linear.cpp
     # softmax.cpp strided_batch_gemm.cpp transform_0213.cpp beam_search_topk.cu
 )
 
