change max_shape to max_shape_size

--- a/lightseq/csrc/ops_new/CMakeLists.txt
+++ b/lightseq/csrc/ops_new/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(operator_files
+    beam_search_topk.cu
     bias_act_dropout.cpp
     bias_add_transform_20314.cpp
     bias_dropout_residual.cpp
@@ -9,8 +10,9 @@ set(operator_files
     launch_enc_emb.cpp
     layer_normalize.cpp
     linear.cpp
-    # softmax.cpp strided_batch_gemm.cpp transform_0213.cpp beam_search_topk.cu
-)
+    softmax.cpp
+    strided_batch_gemm.cpp
+    transform_0213.cpp)
 
 add_library(lightseq_operators STATIC ${operator_files})
 target_link_libraries(lightseq_operators PUBLIC lsflow)
