--- a/lightseq/csrc/layers_new/CMakeLists.txt
+++ b/lightseq/csrc/layers_new/CMakeLists.txt
@@ -1,14 +1,11 @@
 set(layers_files
-    # crf_layer.cpp
-    # dec_enc_attention_layer.cpp
-    # dec_self_attention_layer.cpp
-    encdec_kv_layer.cpp
     feed_forward_layer.cpp
     linear_layer.cpp
     multihead_attention_layer.cpp
-    sample_layer.cpp
     transformer_encoder_layer.cpp
-    # transformer_decoder_layer.cpp
+    # dec_enc_attention_layer.cpp dec_self_attention_layer.cpp
+    # transformer_decoder_layer.cpp crf_layer.cpp encdec_kv_layer.cpp
+    # sample_layer.cpp
 )
 
 add_library(lightseq_layers STATIC ${layers_files})
