--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,13 +102,11 @@ if(USE_NEW_ARCH)
   link_directories(${COMMON_LIB_DIRS})
 
   add_subdirectory(3rdparty/pybind11)
-  # add_subdirectory(lightseq/csrc/tools)
   add_subdirectory(lightseq/csrc/kernels/${DEVICE_ARCHITECTURE})
-  add_subdirectory(lightseq/csrc/layers_new)
   add_subdirectory(lightseq/csrc/lsflow)
-  add_subdirectory(lightseq/csrc/models)
   add_subdirectory(lightseq/csrc/ops_new)
-  add_subdirectory(lightseq/csrc/proto)
+  # add_subdirectory(lightseq/csrc/layers_new)
+  # add_subdirectory(lightseq/csrc/models) add_subdirectory(lightseq/csrc/proto)
   # add_subdirectory(lightseq/csrc/example)
   if(USE_PYBIND)
     message(STATUS "compile with pybind")
