--- a/lightseq/csrc/layers_new/CMakeLists.txt
+++ b/lightseq/csrc/layers_new/CMakeLists.txt
@@ -3,10 +3,12 @@ set(layers_files
     linear_layer.cpp
     multihead_attention_layer.cpp
     transformer_encoder_layer.cpp
-    # dec_enc_attention_layer.cpp dec_self_attention_layer.cpp
-    # transformer_decoder_layer.cpp crf_layer.cpp encdec_kv_layer.cpp
-    # sample_layer.cpp
-)
+    dec_enc_attention_layer.cpp
+    dec_self_attention_layer.cpp
+    transformer_decoder_layer.cpp
+    crf_layer.cpp
+    encdec_kv_layer.cpp
+    sample_layer.cpp)
 
 add_library(lightseq_layers STATIC ${layers_files})
 target_link_libraries(lightseq_layers PUBLIC lightseq_operators lsflow)
