multi kernel develop

--- a/lightseq/csrc/models/CMakeLists.txt
+++ b/lightseq/csrc/models/CMakeLists.txt
@@ -14,5 +14,5 @@ target_include_directories(liblightseq PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 set_target_properties(liblightseq PROPERTIES OUTPUT_NAME lightseq)
 
-add_executable(test_example test_layer.cc)
-target_link_libraries(test_example PUBLIC liblightseq)
+# add_executable(test_example test_layer.cc) target_link_libraries(test_example
+# PUBLIC liblightseq)
