fix compile error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,7 @@ if(USE_NEW_ARCH)
   add_subdirectory(lightseq/csrc/layers_new)
   add_subdirectory(lightseq/csrc/models)
   add_subdirectory(lightseq/csrc/proto)
-  # add_subdirectory(lightseq/csrc/example)
+  add_subdirectory(lightseq/csrc/example)
   if(USE_PYBIND)
     message(STATUS "compile with pybind")
     add_subdirectory(lightseq/csrc/pybind)
