--- a/lightseq/csrc/proto/CMakeLists.txt
+++ b/lightseq/csrc/proto/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 set(PROTO_FILES bert.proto bert_crf.proto transformer.proto)
 
 set(WEIGHT_FILES bert_weight.cc # bert_crf_weight.cc
-    # transformer_weight.cc
+    transformer_weight.cc
 )
 
 protobuf_generate_cpp(PROTO_SRC PROTO_HEADER ${PROTO_FILES})
