--- a/lightseq/csrc/models/CMakeLists.txt
+++ b/lightseq/csrc/models/CMakeLists.txt
@@ -1,7 +1,5 @@
-add_library(
-  liblightseq SHARED bert.cc # bert_crf.cc
-  transformer.cu
-)
+add_library(liblightseq SHARED bert.cc # bert_crf.cc
+                               transformer.cu)
 
 target_link_libraries(liblightseq PUBLIC lightseq_layers)
 
