gpt model develop - finish example

--- a/lightseq/csrc/models/CMakeLists.txt
+++ b/lightseq/csrc/models/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(liblightseq SHARED bert.cc # bert_crf.cc
-                               transformer.cu)
+                               transformer.cu gpt.cc
+                               )
 
 target_link_libraries(liblightseq PUBLIC lightseq_layers)
 
