split declaration and definition

--- a/lightseq/csrc/models/CMakeLists.txt
+++ b/lightseq/csrc/models/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(liblightseq SHARED bert.cc # bert_crf.cc
-                               transformer.cu gpt.cc)
+                               transformer.cu gpt.cc model_util.cc)
 
 target_link_libraries(liblightseq PUBLIC lightseq_layers)
 
