--- a/lightseq/csrc/proto/CMakeLists.txt
+++ b/lightseq/csrc/proto/CMakeLists.txt
@@ -18,6 +18,8 @@ add_library(weight_lib STATIC ${WEIGHT_FILES} ${PROTO_SRC} ${PROTO_HEADER}
                               proto_util.cc)
 target_link_libraries(weight_lib PRIVATE ${HDF5_LIBRARIES})
 target_link_libraries(weight_lib PUBLIC ${Protobuf_LIBRARIES})
+target_link_libraries(weight_lib PUBLIC lightseq_kernels)
+
 target_include_directories(weight_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(weight_lib PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
 target_include_directories(weight_lib PUBLIC ${HDF5_INCLUDE_DIRS})
