generator layer develop

--- a/lightseq/csrc/proto/CMakeLists.txt
+++ b/lightseq/csrc/proto/CMakeLists.txt
@@ -10,8 +10,8 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 set(PROTO_FILES bert.proto bert_crf.proto transformer.proto gpt.proto)
 
-set(WEIGHT_FILES bert_weight.cc # bert_crf_weight.cc
-                 transformer_weight.cc gpt_weight.cc)
+set(WEIGHT_FILES bert_weight.cc bert_crf_weight.cc transformer_weight.cc
+                 gpt_weight.cc)
 
 protobuf_generate_cpp(PROTO_SRC PROTO_HEADER ${PROTO_FILES})
 add_library(weight_lib STATIC ${WEIGHT_FILES} ${PROTO_SRC} ${PROTO_HEADER}
